[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/areas/Door.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/doors.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 32 )

[node name="Door" type="StaticBody2D" groups=[
"DOORS",
]]
collision_layer = 0
collision_mask = 9
script = ExtResource( 3 )

[node name="Left" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="Left"]
position = Vector2( -16, 0 )

[node name="Door" type="Sprite" parent="Left/Sprites"]
position = Vector2( -8, 0 )
texture = ExtResource( 4 )
hframes = 9
frame = 5

[node name="OpenDoor" type="Sprite" parent="Left/Sprites"]
texture = ExtResource( 4 )
hframes = 9
frame = 3

[node name="Sprite2" type="Sprite" parent="Left/Sprites"]
position = Vector2( 8, 0 )
texture = ExtResource( 4 )
hframes = 9

[node name="Lock" type="Area2D" parent="Left"]
position = Vector2( -24, 0 )
collision_layer = 512
collision_mask = 480

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Lock"]
shape = SubResource( 1 )

[node name="ClosedDoor" type="StaticBody2D" parent="Left"]
position = Vector2( -24, 0 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/ClosedDoor"]
modulate = Color( 0.439216, 0.0784314, 0.00784314, 1 )
shape = SubResource( 2 )

[node name="Transition" type="Area2D" parent="Left"]
position = Vector2( -12, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/Transition"]
shape = SubResource( 3 )

[node name="Exit" type="Position2D" parent="Left"]
position = Vector2( 48, 0 )

[node name="CameraAnchor" type="Position2D" parent="Left"]
position = Vector2( -256, 0 )

[node name="Right" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="Right"]
position = Vector2( 16, 0 )
scale = Vector2( -1, 1 )

[node name="Door" type="Sprite" parent="Right/Sprites"]
position = Vector2( -8, 0 )
texture = ExtResource( 4 )
hframes = 9
frame = 5

[node name="OpenDoor" type="Sprite" parent="Right/Sprites"]
texture = ExtResource( 4 )
hframes = 9
frame = 3

[node name="Sprite2" type="Sprite" parent="Right/Sprites"]
position = Vector2( 8, 0 )
texture = ExtResource( 4 )
hframes = 9

[node name="Lock" type="Area2D" parent="Right"]
visible = false
position = Vector2( 24, 0 )
collision_layer = 512
collision_mask = 480

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Lock"]
shape = SubResource( 1 )

[node name="ClosedDoor" type="StaticBody2D" parent="Right"]
position = Vector2( 24, 0 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/ClosedDoor"]
modulate = Color( 0.439216, 0.0784314, 0.00784314, 1 )
shape = SubResource( 2 )

[node name="Transition" type="Area2D" parent="Right"]
position = Vector2( 12, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Transition"]
shape = SubResource( 3 )

[node name="Exit" type="Position2D" parent="Right"]
position = Vector2( -48, 0 )

[node name="CameraAnchor" type="Position2D" parent="Right"]
position = Vector2( 256, 0 )

[node name="Wall" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.027451, 0.862745, 0, 1 )
shape = SubResource( 4 )

[node name="RoomDivider" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDivider"]
self_modulate = Color( 0.027451, 0.862745, 0, 1 )
shape = SubResource( 5 )
[connection signal="area_entered" from="Left/Lock" to="." method="_on_Left_Lock_area_entered"]
[connection signal="body_entered" from="Left/Transition" to="." method="_on_Left_Transition_body_entered"]
[connection signal="area_entered" from="Right/Lock" to="." method="_on_Right_Lock_area_entered"]
[connection signal="body_entered" from="Right/Transition" to="." method="_on_Right_Transition_body_entered"]
